[package]
name = "vending-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = "1.0.163"
time = { version = "0.3.21", features = ["macros","serde"] }
